# wasm_site

./: Cargo.toml  bad_server.py  best.css  index.html  serve.sh
src/: app.rs  lib.rs
src/app/: pages.rs
src/app/pages/: about.rs  blog.rs  homepage.rs  notfound.rs
src/app/pages/blog/: page.rs  post.rs
src/app/test_pages/: fetch.rs  json.rs  lorem.rs  mod.rs
src/widgets/: tabs.rs
static/: blog.json  blog_a.md  blog_b.md
