[package]
name = "wasm_site"
version = "0.1.0"
authors = ["Ben Lichtman"]
edition = "2018"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
stdweb = "0.4"
web-sys = "0.3"
wee_alloc = "0.4"
yew = { version = "0.13", features = ["web_sys"] }
yew-router = { version = "0.10", features = ["web_sys"]}
pulldown-cmark = "0.7"
